# repo2docker

./: .codecov.yml  .coveragerc  .dockerignore  .gitattributes  .gitignore  .gitpod.yml  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGES.rst  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  RELEASE.md  ROADMAP.md  azure-pipelines.yml  builder.md  codecov.yml  dev-requirements.txt  docker-compose.test.yml  install-s2i.bash  playwright-requirements.txt  pull_cache_list_test.py  pyproject.toml  readthedocs.yml  requirements.in  requirements.txt  roadmap.md  setup.cfg  setup.py  test_setuptools.py  tox.ini  versioneer.py
.circleci/: config.yml
.devcontainer/: devcontainer.json
.github/: dependabot.yaml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  support-question.md
.github/workflows/: docker.yml  refreeze.yaml  release.yml  test.yml  update-environment.yml
builder/: app.py  detectors.py  utils.py
docker/: entrypoint  git-credential-env
docs/: Makefile  doc-requirements.txt  issue_template.md  make.bat  pull_request_template.md  requirements.txt
docs/source/: api.rst  architecture.md  builder.md  builder.rst  changelog.md  changelog.rst  cli.md  conf.py  config_files.rst  config_files.txt  deploy.rst  design.md  dev_newbuildpack.md  examples.rst  faq.md  faq.rst  index.md  index.rst  install.rst  overview.rst  samples.rst  specification.md  specification.rst  start.md  usage.rst  use.rst
docs/source/_static/: custom.css
docs/source/configuration/: actions.md  datascience.md  development.md  index.md  index.rst  research.md  system.md
docs/source/contribute/: buildpack.md  contentprovider.rst  contributing.md  index.rst  roadmap.md  tasks.md
docs/source/contributing/: buildpack.md  contentprovider.rst  contributing.md  index.rst  roadmap.md  tasks.md
docs/source/getting-started/: index.rst
docs/source/howto/: base_image.md  breaking_changes.md  deploy.rst  export_environment.rst  index.rst  jupyterhub_images.rst  lab_workspaces.rst  languages.md  languages.rst  user_interface.rst
docs/source/use/: action.md  actions-and-scripts.md  community-image.md  extend-community-image.md  index.md  pathways.md  repository.md
hooks/: README.md  post_push
repo2docker/: __init__.py  __main__.py  _version.py  app.py  detectors.py  docker.py  engine.py  logstore.py  podman.py  semver.py  utils.py
repo2docker/buildpacks/: Dockerfile.j2  __init__.py  _r_base.py  base.py  conda.py  docker.py  healthcheck.py  julia.py  legacy.py  python.py  python3-login  r.py  repo2docker-entrypoint
repo2docker/buildpacks/conda/: __init__.py  activate-conda.sh  environment.frozen.yml  environment.py-2.7.frozen.yml  environment.py-2.7.yml  environment.py-3.10.yml  environment.py-3.11.yml  environment.py-3.12.yml  environment.py-3.13.yml  environment.py-3.14.yml  environment.py-3.5.frozen.yml  environment.py-3.5.yml  environment.py-3.6.frozen.yml  environment.py-3.6.yml  environment.py-3.7.frozen.yml  environment.py-3.7.yml  environment.py-3.8.frozen.yml  environment.py-3.8.yml  environment.py-3.9.frozen.yml  environment.py-3.9.yml  environment.yml  freeze.py  install-base-env.bash  install-micromamba.bash  install-miniconda.bash  install-miniforge.bash  notebook.yml  requirements.py-3.5.pip  requirements.py-3.5.txt  supported_python_version.py  update.py
repo2docker/buildpacks/guix/: __init__.py  guix-install.bash
repo2docker/buildpacks/iframes/: custom.js  jupyter_notebook_config.py
repo2docker/buildpacks/julia/: __init__.py  install-repo-dependencies.jl  julia_project.py  julia_require.py  julia_semver.py  semver.py
repo2docker/buildpacks/julialegacy/: __init__.py
repo2docker/buildpacks/legacy/: __init__.py  apt-sources.list  freeze.py  python3.frozen.yml  python3.yml  root.frozen.yml  root.yml
repo2docker/buildpacks/nix/: __init__.py  install-nix.bash  nix-shell-wrapper
repo2docker/contentproviders/: __init__.py  base.py  ckan.py  dataverse.json  dataverse.py  doi.py  figshare.py  git.py  hydroshare.py  ipfs.py  meca.py  mercurial.py  swhid.py  zenodo.py
s2i-builders/: generate.py
s2i-builders/conda/: Dockerfile  Makefile  environment.yml
s2i-builders/julia/: Dockerfile  Makefile  README.md
scripts/: refreeze
singleuser-builder/: Dockerfile  Dockerfile.py2  Makefile  README.md
singleuser-builder-conda/: Dockerfile  Makefile  environment.yml  install-miniconda.bash
tests/: argumentvalidation.py  check-tmp  conftest.py  env.py  gitignore.py  memlimit.py  ports.py  test_args.py  test_cache_from.py  test_clone_depth.py  test_connect_url.py  test_editable.py  test_env_yml.py  test_labels.py  test_provider_git.py  test_subdir.py  test_utils.py  users.py  volumes.py
tests/conda/: README.md  ignore-file
tests/contentproviders/: test_dataverse.py  test_git.py  test_hydroshare.py  test_local.py
tests/default/: verify
tests/freeze/: test_freeze.py
tests/julia/: README.md
tests/memlimit/: .gitignore
tests/norun/: .gitignore  Dockerfile  test_find.py  test_registry.py
tests/poetry/py2-with-server-and-kernel-req/: README.rst  pyproject.toml  verify
tests/poetry/setup-py-explicit-in-binder-dir/.binder/: pyproject.toml
tests/pyproject/pyproject-toml/: README.rst  pyproject.toml  verify
tests/r/: README.md
tests/refreeze/: test_refreeze.py
tests/registry/: test_registry.py
tests/stencila-r/: verify
tests/ui/: README.md
tests/unit/: test_app.py  test_args.py  test_argumentvalidation.py  test_binder_dir.py  test_buildpack.py  test_cache_from.py  test_clone_depth.py  test_connect_url.py  test_docker.py  test_editable.py  test_engine.py  test_env.py  test_env_yml.py  test_external_scripts.py  test_freeze.py  test_labels.py  test_logstore.py  test_memlimit.py  test_pipenv_buildpack.py  test_podman.py  test_ports.py  test_preassemble.py  test_r.py  test_semver.py  test_subdir.py  test_tarball.py  test_users.py  test_utils.py  test_versions.py  test_volumes.py
travis/: travis-script.bash
ubuntu1610-python35-venv/: Dockerfile  README.md
(+368 files in other folders)
