[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "jupyter-repo2docker"
dynamic = ["version"]
description = "repo2docker: Turn code repositories into Jupyter enabled Docker Images"
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    {name = "Project Jupyter Contributors", email = "jupyter@googlegroups.com"}
]
maintainers = [
    {name = "Project Jupyter Contributors", email = "jupyter@googlegroups.com"}
]
keywords = ["reproducible", "science", "environments", "docker"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.9"
dependencies = [
    "chardet",
    "docker!=5.0.0",
    "entrypoints",
    "escapism",
    "iso8601",
    "jinja2",
    "python-json-logger",
    "requests",
    "ruamel.yaml>=0.15",
    "semver",
    "toml",
    "traitlets",
]

[project.urls]
Homepage = "https://repo2docker.readthedocs.io"
Documentation = "https://repo2docker.readthedocs.io"
Funding = "https://jupyter.org/about#donate"
Source = "https://github.com/jupyterhub/repo2docker"
Tracker = "https://github.com/jupyterhub/repo2docker/issues"

[project.scripts]
jupyter-repo2docker = "repo2docker.__main__:main"
repo2docker = "repo2docker.__main__:main"

[project.entry-points."repo2docker.engines"]
docker = "repo2docker.docker:DockerEngine"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = [""]
include = ["repo2docker"]


[tool.setuptools_scm]
write_to = "repo2docker/_version.py"
