[tool.poetry]
name = "binder-folder"
version = "0.1.0"
description = "Test project for poetry buildpack"
authors = ["Robert Rosca <32569096+RobertRosca@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^2.7"
cowsay = "*"
sampleproject = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
